test/tests/stages/8_loops/valid/break_immediate.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(10)
  ;
  while
  (
  (
  identifier(a)
  =
  const int(1)
  )
  )
  break
  ;
  return
  identifier(a)
  ;
  }
