test/tests/stages/8_loops/invalid_semantics/break_not_in_loop.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[13]:
  int
  identifier(main)
  (
  void
  )
  {
  if
  (
  const int(1)
  )
  break
  ;
  }
